style: add padding on list todo page

--- a/assets/scss/layouts/_main.scss
+++ b/assets/scss/layouts/_main.scss
@@ -8,6 +8,7 @@
   main {
     // height: -webkit-fill-available;;
     height: 100dvh;
+    padding: $spacer-3 $spacer-4;
     overflow-y: scroll;
   }
 
